--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Biglietto Treno</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <input id="age" type="text" placeholder="Inserisci la tua età">
+    <input id="km" type="text" placeholder="Inserisci i km da percorrere">
+
+    <div class="fake-button" id="collect_data">invia</div>
 
 
-    <script type="text/javascript" src="mainjavascript.js"></script>
+
+    <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
