Impostazione contenuto pagina (HTML/CSS)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
 </head>
 <body>
     
-    <input id="age" type="text" placeholder="Inserisci la tua età">
-    <input id="km" type="text" placeholder="Inserisci i km da percorrere">
+    <section>
 
-    <div class="fake-button" id="collect_data">invia</div>
+        <div class="title">
+            <h2>calcola il prezzo del tuo biglietto</h2>
+        </div>
 
+        <div class="container">
+
+            <div class="card">
+                <h3>Nome e Cognome</h3>
+                <input id="name" type="text" placeholder="nome">
+            </div>
+
+            <div class="card">
+                <h3>KM da percorrere</h3>
+                <input id="km" type="text" placeholder="km">
+            </div>
+
+            <div class="card">
+                <h3>Età</h3>
+                <input id="age" type="text" placeholder="età">
+            </div>
+
+            <div class="card big">
+                <div class="fake-button" id="collect_data">
+                    <strong>Genera</strong>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
 
 
     <script type="text/javascript" src="main.js"></script>
