Completato layout pagina e output js (no tipo biglietto)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>calcola il prezzo del tuo biglietto</h2>
         </div>
 
-        <div class="container">
+        <div class="container" id="dati">
 
             <div class="card">
                 <h3>Nome e Cognome</h3>
@@ -36,11 +36,63 @@
                 <div class="fake-button" id="collect_data">
                     <strong>Genera</strong>
                 </div>
+
+                <div class="fake-button">
+                    <strong>Annulla</strong>
+                </div>
             </div>
 
         </div>
 
     </section>
+
+    <section>
+
+        <div class="title">
+            <h2>il tuo biglietto</h2>
+        </div>
+
+        <div class="container" id="ticket">
+
+            <h3>DETTAGLIO PASSEGGERI</h3>
+
+            <div id="data-output">
+
+                <div class="box">
+                    <h3>NOME PASSEGGERO</h3>
+                    
+                    <strong id="name-output">Jon Snow</strong>
+                </div>
+
+                <div class="box">
+                    <h5>Offerta</h5>
+                    <span>Biglietto</span>
+                    <span id="">...</span>
+                </div>
+
+                <div class="box">
+                    <h5>Carrozza</h5>
+                    <span id="random-output-1">...</span>
+                </div>
+
+                <div class="box">
+                    <h5>Codice CP</h5>
+                    <span id="random-output-2">...</span>
+                </div>
+
+                <div class="box">
+                    <h5>Costo biglietto</h5>
+                    <span>€</span>
+                    <span id="ticket-output">...</span>
+                </div>
+
+            </div>
+
+            
+        </div>
+
+    </section>
+
 
 
     <script type="text/javascript" src="main.js"></script>
