Aggiunta logica e output tipo biglietto e bottone annulla

--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
             <h2>calcola il prezzo del tuo biglietto</h2>
         </div>
 
-        <div class="container" id="dati">
+        <form class="container" id="dati">
 
             <div class="card">
                 <h3>Nome e Cognome</h3>
-                <input id="name" type="text" placeholder="nome">
+                <input id="name" type="text">
             </div>
 
             <div class="card">
                 <h3>KM da percorrere</h3>
-                <input id="km" type="text" placeholder="km">
+                <input id="km" type="text">
             </div>
 
             <div class="card">
                 <h3>Età</h3>
-                <input id="age" type="text" placeholder="età">
+                <input id="age" type="text">
             </div>
 
             <div class="card big">
-                <div class="fake-button" id="collect_data">
+                <button class="style-button" id="collect_data">
                     <strong>Genera</strong>
-                </div>
+                </button>
 
-                <div class="fake-button">
+                <button class="style-button">
                     <strong>Annulla</strong>
-                </div>
+                </button>
             </div>
 
-        </div>
+        </form>
 
     </section>
 
@@ -61,13 +61,13 @@
                 <div class="box">
                     <h3>NOME PASSEGGERO</h3>
                     
-                    <strong id="name-output">Jon Snow</strong>
+                    <strong id="name-output">...</strong>
                 </div>
 
                 <div class="box">
                     <h5>Offerta</h5>
                     <span>Biglietto</span>
-                    <span id="">...</span>
+                    <span id="type-ticket-output">...</span>
                 </div>
 
                 <div class="box">
