--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     
+    <!-- sezione form raccolta dati -->
     <section>
 
         <div class="title">
@@ -46,6 +47,7 @@
 
     </section>
 
+    <!-- sezione output biglietto -->
     <section>
 
         <div class="title">
@@ -93,8 +95,7 @@
 
     </section>
 
-
-
     <script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
